--- a/house-frontend/package.json
+++ b/house-frontend/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/creativetimofficial/soft-ui-dashboard-react.git"
   },
   "engines": {
-    "node": "14 || 15 || 16",
+    "node": "14 || 15 || 16",s
     "npm": ">=6"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.3",
     "@testing-library/user-event": "13.5.0",
+    "@material-ui/core": "4.12.3",
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
     "prop-types": "15.8.1",
