Update package.json file to inclue material ui

--- a/house-frontend/package.json
+++ b/house-frontend/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/creativetimofficial/soft-ui-dashboard-react.git"
   },
   "engines": {
-    "node": "14 || 15 || 16",s
+    "node": "14 || 15 || 16",
     "npm": ">=6"
   },
   "dependencies": {
