--- a/house-frontend/jsconfig.json
+++ b/house-frontend/jsconfig.json
@@ -3,6 +3,12 @@
     "baseUrl": "src",
     "paths": {
       "*": ["src/*"]
-    }
-  }
+    },
+    "target": "ES6",
+    "jsx": "react"
+  },
+  "exclude": [
+      "node_modules",
+      "**/node_modules/*"
+  ]
 }
