--- a/house-frontend/package.json
+++ b/house-frontend/package.json
@@ -20,24 +20,27 @@
     "@emotion/cache": "11.7.1",
     "@emotion/react": "11.8.1",
     "@emotion/styled": "11.8.1",
+    "@material-ui/core": "4.12.3",
     "@mui/icons-material": "5.4.2",
     "@mui/material": "5.4.3",
     "@mui/styled-engine": "5.4.2",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.3",
     "@testing-library/user-event": "13.5.0",
-    "@material-ui/core": "4.12.3",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
     "prop-types": "15.8.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-chartjs-2": "3.0.4",
     "react-countup": "6.1.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-flatpickr": "3.10.7",
     "react-github-btn": "1.2.1",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
     "stylis": "4.0.13",
     "stylis-plugin-rtl": "2.1.1",
     "uuid": "8.3.2",
