Update http-common.js to resolve cors issues and close to resolving issues with consuming data from users api

--- a/house-frontend/jsconfig.json
+++ b/house-frontend/jsconfig.json
@@ -4,8 +4,7 @@
     "paths": {
       "*": ["src/*"]
     },
-    "target": "ES6",
-    "jsx": "react"
+    "target": "ES6"
   },
   "exclude": [
       "node_modules",
