--- a/house-frontend/package.json
+++ b/house-frontend/package.json
@@ -1,17 +1,9 @@
 {
-  "name": "soft-ui-dashboard-react",
-  "version": "3.1.0",
-  "author": "Creative Tim",
-  "license": "SEE LICENSE IN <https://www.creative-tim.com/license>",
-  "description": "ReactJS version of Soft UI Dashboard by Creative Tim",
-  "homepage": "https://demos.creative-tim.com/soft-ui-dashboard-react/#/",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/soft-ui-dashboard-react/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/soft-ui-dashboard-react.git"
-  },
+  "name": "household-management-app",
+  "version": "1.0.0",
+  "author": "Geoff Norman",
+  "description": "CCSF CS 195 Practicum project using ReactJS version of Soft UI Dashboard by Creative Tim",
+  "homepage": "/home",
   "engines": {
     "node": "14 || 15 || 16",
     "npm": ">=6"
