--- a/house-frontend/package.json
+++ b/house-frontend/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
+    "jwt-decode": "^3.1.2",
     "prop-types": "15.8.1",
     "react": "^17.0.2",
     "react-chartjs-2": "3.0.4",
