--- a/house-frontend/package.json
+++ b/house-frontend/package.json
@@ -24,6 +24,7 @@
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
     "jwt-decode": "^3.1.2",
+    "material-ui-popup-state": "^2.0.1",
     "prop-types": "15.8.1",
     "react": "^17.0.2",
     "react-chartjs-2": "3.0.4",
