--- a/house-frontend/package.json
+++ b/house-frontend/package.json
@@ -23,8 +23,16 @@
     "bootstrap": "^5.1.3",
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react": "^7.28.0",
     "jwt-decode": "^3.1.2",
     "material-ui-popup-state": "^2.0.1",
+    "prettier": "^2.5.1",
     "prop-types": "15.8.1",
     "react": "^17.0.2",
     "react-chartjs-2": "3.0.4",
