--- a/house-frontend/package.json
+++ b/house-frontend/package.json
@@ -28,8 +28,8 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jwt-decode": "^3.1.2",
     "material-ui-popup-state": "^2.0.1",
     "prettier": "^2.5.1",
@@ -40,6 +40,7 @@
     "react-dom": "^17.0.2",
     "react-flatpickr": "3.10.7",
     "react-github-btn": "1.2.1",
+    "react-hook-form": "^7.31.1",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
